[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/script_listas.gd" type="Script" id=1]

[node name="Atividade_avaliativa" type="Node2D"]
script = ExtResource( 1 )

[node name="show_lista_completa" type="Button" parent="."]
margin_left = 149.0
margin_top = 434.0
margin_right = 252.0
margin_bottom = 483.0
text = "lista completa"

[node name="enviar_valores" type="Button" parent="."]
margin_left = 724.0
margin_top = 437.0
margin_right = 825.0
margin_bottom = 488.0
text = "enviar valores"

[node name="lable_completa" type="Label" parent="."]
margin_left = 162.0
margin_top = 383.0
margin_right = 202.0
margin_bottom = 397.0
rect_scale = Vector2( 2, 2 )

[node name="dado1" type="LineEdit" parent="."]
margin_left = 738.0
margin_top = 381.0
margin_right = 815.0
margin_bottom = 422.0

[node name="instrução" type="Label" parent="."]
margin_left = 709.0
margin_top = 352.0
margin_right = 845.0
margin_bottom = 366.0
text = "digite os valores aqui"

[node name="lable_adicionada" type="Label" parent="."]
margin_left = 696.0
margin_top = 286.0
margin_right = 845.0
margin_bottom = 329.0

[node name="texto_na_tela" type="Label" parent="."]
margin_left = 238.0
margin_top = 24.0
margin_right = 278.0
margin_bottom = 38.0
text = "função que retorna texto na tela"

[node name="show_texto" type="Button" parent="."]
margin_left = 123.0
margin_top = 21.0
margin_right = 215.0
margin_bottom = 54.0
text = "texto na tela"

[connection signal="pressed" from="show_lista_completa" to="." method="_on_show_lista_completa_pressed"]
[connection signal="pressed" from="enviar_valores" to="." method="_on_enviar_valores_pressed"]
[connection signal="pressed" from="show_texto" to="." method="_on_show_texto_pressed"]
